Lab - Add Multiple Ix completed and tested.

--- a/src/main/webapp/lab/investigation_item_value_path.xhtml
+++ b/src/main/webapp/lab/investigation_item_value_path.xhtml
@@ -40,6 +40,7 @@
                                       rendered="#{investigationItemController.current ne null}" ></p:editor>
                            
                         </h:panelGroup>
+                        <a href="https://html-online.com/editor/"  target="_blank"  >An external link to remove un-necessary formatings</a>
                     </p:panel>
 
 
