--- a/src/main/webapp/admin_fees.xhtml
+++ b/src/main/webapp/admin_fees.xhtml
@@ -19,6 +19,17 @@
                             <p:panel header="Fees" >
                                 <h:panelGrid columns="1" >
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Item Fees" action="/common/manage_item_fees" onclick="onSubmitButton();"/>
+                                    <p:commandButton styleClass="linkButton"
+                                                     ajax="false" 
+                                                     value="Add New Item Fees" 
+                                                     action="/dataAdmin/manage_item_fees_bulk" 
+                                                     onclick="onSubmitButton();"/>
+
+                                    <p:commandButton styleClass="linkButton"
+                                                     ajax="false" 
+                                                     value="Correct Item Fees" 
+                                                     action="/dataAdmin/bulk_update_itemsFees" 
+                                                     onclick="onSubmitButton();"/>
                                 </h:panelGrid>
                             </p:panel>
 
@@ -28,7 +39,7 @@
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Discount Schemes(MemberShip)" action="payment_scheme_member_ship" onclick="onSubmitButton();"/>
                                 </h:panelGrid>
                             </p:panel>
-                             <p:panel header="Manage Membership Scheme" >
+                            <p:panel header="Manage Membership Scheme" >
                                 <h:panelGrid columns="1" >
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Membership Schemes" action="/memberShip/membership_scheme" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Membership Schemes Dicounts" action="/memberShip/membership_scheme_discount_inward" onclick="onSubmitButton();"/>
@@ -41,7 +52,7 @@
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Manage Package Prices" action="/lab/package_item_prices" onclick="onSubmitButton();"/>
                                 </h:panelGrid>
                             </p:panel>
-                             <p:panel header="Manage Medical Packages" styleClass=".grid1.ui-panel" >
+                            <p:panel header="Manage Medical Packages" styleClass=".grid1.ui-panel" >
                                 <h:panelGrid columns="1" columnClasses="grid1 grid1" >
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Medical Package Names" action="opd_medical_package_name" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Add Item to Package" action="opd_medical_package_item" onclick="onSubmitButton();"/>
