--- a/src/main/webapp/admin_items.xhtml
+++ b/src/main/webapp/admin_items.xhtml
@@ -72,9 +72,16 @@
                                                      value="Create New Items for New Institution" 
                                                      action="/dataAdmin/create_items_for_new_institution" 
                                                      onclick="onSubmitButton();"/>
+                                    
                                     <p:commandButton styleClass="linkButton"
                                                      ajax="false" 
-                                                     value="Update Item Fees" 
+                                                     value="Manage Item Fees" 
+                                                     action="/dataAdmin/manage_item_fees_bulk" 
+                                                     onclick="onSubmitButton();"/>
+                                    
+                                    <p:commandButton styleClass="linkButton"
+                                                     ajax="false" 
+                                                     value="Correct Item Fees" 
                                                      action="/dataAdmin/bulk_update_itemsFees" 
                                                      onclick="onSubmitButton();"/>
                                 </h:panelGrid>
