--- a/src/main/webapp/resources/ezcomp/common_report.xhtml
+++ b/src/main/webapp/resources/ezcomp/common_report.xhtml
@@ -12,7 +12,7 @@
         <cc:attribute  name="commonReportFormat" type="com.divudi.entity.Category" />
         <cc:attribute  name="patientReport" type="com.divudi.entity.lab.PatientReport" />
         <cc:attribute  name="showBorders" type="boolean" />
-        
+
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
@@ -54,6 +54,23 @@
                     <f:param name="id" value="#{cc.attrs.patientReport.approveUser.staff.id}" />
                 </p:graphicImage>
 
+                <h:panelGroup rendered="#{myCli.ixItemType eq 'Barcode' and myCli.retired ne true }"  
+                              >
+                    <p:barcode value="0123456789" 
+                               cache="false"
+                               type="code128" height="#{myCli.htPix}" width="#{myCli.wtPix}" />
+                </h:panelGroup>
+                <h:panelGroup rendered="#{myCli.ixItemType eq 'BarcodeVertical' and myCli.retired ne true }"  
+                              >
+                    <div style="height: #{myCli.htPix}px; width:#{myCli.wtPix}px; right: 0px; position: absolute; overflow: hidden; " >
+                        <p:barcode value="0123456789" 
+                                   cache="false" style="overflow: hidden; "
+                                   type="code128" orientation="90" height="#{myCli.htPix}" width="#{myCli.wtPix}" />
+                    </div>
+
+                </h:panelGroup>
+                <h:panelGroup rendered="#{myCli.ixItemType eq 'Css' and myCli.retired ne true }"  
+                              layout="block" style=" #{myCli.description}"        ></h:panelGroup>
             </div>
         </ui:repeat>
 
