--- a/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
+++ b/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
@@ -79,9 +79,6 @@
 
 
                         <p:dataTable  id="tblBills" value="#{searchController.patientInvestigations}" var="pi" rowIndexVar="i" >
-                            <p:column  headerText="No" styleClass="alignTop" >
-                                <p:outputLabel value="#{i+1}" />
-                            </p:column>
                             <p:column  headerText="Bill" styleClass="alignTop" >
                                 <h:outputLabel id="lblBillNo" 
                                                value="#{pi.billItem.bill.insId}" 
@@ -118,7 +115,7 @@
                                 </p:tooltip>
                             </p:column>
 
-                            <p:column  headerText="Dep ID" styleClass="alignTop" >
+                            <p:column  headerText="Dep ID" styleClass="alignTop" rendered="false" >
                                 <h:outputLabel id="lblInvNo" 
                                                value="#{pi.billItem.bill.deptId}" 
                                                styleClass="#{pi.billItem.bill.cancelled or pi.billItem.transRefund ? 'redtext':''}"></h:outputLabel>
@@ -156,7 +153,7 @@
                             <p:column  headerText="Patient" styleClass="alignTop" >
                                 <h:commandLink id="colPtDetail" rendered="#{webUserController.hasPrivilege('LabEditPatient') and pi.billItem.bill.approvedAnyTest}" 
                                                value="#{pi.billItem.bill.patient.person.nameWithTitle}, #{pi.billItem.bill.patient.age}" 
-                                               action="patient" 
+                                               action="/patient" 
                                                style="text-decoration:underline;"
                                                styleClass="#{pi.billItem.bill.cancelled or pi.billItem.transRefund ? 'redtext':''}"
                                                >
@@ -165,7 +162,7 @@
                                 </h:commandLink>
                                 <h:commandLink id="colPtDetail1" rendered="#{!pi.billItem.bill.approvedAnyTest}"
                                                value="#{pi.billItem.bill.patient.person.nameWithTitle}, #{pi.billItem.bill.patient.age}" 
-                                               action="patient" 
+                                               action="/patient" 
                                                style="text-decoration:underline;"
                                                styleClass="#{pi.billItem.bill.cancelled or pi.billItem.transRefund ? 'redtext':''}"
                                                >
