--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -28,6 +28,9 @@
                     <h:outputLabel value="OPD"/>
                 </f:facet>
                 <h:panelGroup rendered="#{!billController.printPreview}" styleClass="alignTop" >
+
+
+
                     <p:panel style="min-height: 600px; position:relative;"  >
                         <h:panelGrid columns="20"  >
                             <h:panelGrid columns="1">                                
@@ -90,100 +93,115 @@
                                                 listener="#{billController.onTabChange}" />
 
                                         <p:tab id="tabNewPt" title="New Patient"   >
+                                            <p:panel header="Enter New Patient Details" style="width: 550px;">
 
+                                                <p:panelGrid columns="2" >
+                                                    <p:selectOneMenu  id="cmbTitle"  style="width: 100px;"
+                                                                      value="#{billController.newPatient.person.title}"  >
+                                                        <f:selectItem itemLabel="Select Title" />
+                                                        <f:selectItems value="#{billController.title}" var="i" 
+                                                                       itemLabel="#{i.label}" itemValue="#{i}"/>
+                                                    </p:selectOneMenu>
 
-                                            <table >
-                                                <tr >
-                                                    <td >
-                                                        <p:outputLabel value="Title &amp; Name" ></p:outputLabel>
-                                                    </td>
-                                                    <td> : </td>
-                                                    <td >
-                                                        <p:selectOneMenu  id="cmbTitle"  
-                                                                          value="#{billController.newPatient.person.title}"  >
-                                                            <f:selectItem itemLabel="Select Title" />
-                                                            <f:selectItems value="#{billController.title}" var="i" 
-                                                                           itemLabel="#{i.label}" itemValue="#{i}"/>
-                                                        </p:selectOneMenu>
+                                                    <p:inputText autocomplete="off"  id="txtNewPtName" placeholder="Enter the Name of the patient"
+                                                                 value="#{billController.newPatient.person.name}" 
+                                                                 style="min-width: 350px;text-transform:uppercase;">
+                                                    </p:inputText>
 
-                                                    </td>
-                                                    <td  >
-                                                        <p:inputText autocomplete="off"  id="txtNewPtName" 
-                                                                     value="#{billController.newPatient.person.name}" 
-                                                                     style="width: 350px;text-transform:uppercase;">
+                                                    <p:selectOneMenu id="txtNewSex"  value="#{billController.newPatient.person.sex}" style="width: 100px;">
+                                                        <f:selectItem itemLabel="Select Gender"/>
+                                                        <f:selectItems value="#{billController.sex}"/>
+                                                    </p:selectOneMenu>
+
+                                                    <h:panelGrid columns="4">
+                                                        <p:inputText autocomplete="off"  id="year"  
+                                                                     value="#{billController.yearMonthDay.year}" 
+                                                                     style="width: 80px; ">
+                                                            <f:ajax event="keyup" execute="@this month day" render="calNewPtDob" 
+
+                                                                    listener="#{billController.dateChangeListen()}"  />
                                                         </p:inputText>
-                                                    </td>
-                                                </tr>
+                                                        <p:inputText autocomplete="off" id="month"
+                                                                     style="width: 80px; " value="#{billController.yearMonthDay.month}">
+                                                            <f:ajax event="keyup" execute="@this year day" render="calNewPtDob" listener="#{billController.dateChangeListen()}"  />
+                                                        </p:inputText>
+                                                        <p:inputText autocomplete="off" id="day" 
+                                                                     style="width: 80px;" value="#{billController.yearMonthDay.day}">
+                                                            <f:ajax event="keyup" execute="@this year month" render="calNewPtDob" listener="#{billController.dateChangeListen()}" />
+                                                        </p:inputText>
+                                                        <p:calendar  value="#{billController.newPatient.person.dob}" 
+                                                                     id="calNewPtDob"  navigator="true" pattern="dd/MM/yyyy" 
+                                                                     style="width: 115px!important;"
+                                                                     styleClass="shortinput">
+                                                            <f:ajax event="dateSelect" />
+                                                        </p:calendar>
+                                                    </h:panelGrid>
 
-                                                <tr>
-                                                    <td>
-                                                        <p:outputLabel value="Sex &amp; Age" ></p:outputLabel>
-                                                    </td>
-                                                    <td> : </td>
-                                                    <td>
-                                                        <p:selectOneMenu id="txtNewSex"  value="#{billController.newPatient.person.sex}" >
-                                                            <f:selectItem itemLabel="Select Sex"/>
-                                                            <f:selectItems value="#{billController.sex}"/>
-                                                        </p:selectOneMenu>
-                                                    </td>
-                                                    <td>
-                                                        <h:panelGrid columns="4">
-                                                            <p:inputText autocomplete="off"  id="year"  
-                                                                         value="#{billController.yearMonthDay.year}" 
-                                                                         style="width: 50px; ">
-                                                                <f:ajax event="keyup" execute="@this month day" render="calNewPtDob" 
+                                                    <p:inputMask mask="999-9999999" id="txtNewPtPhone" 
+                                                                 autocomplete="off" maxlength="11" placeholder="Phone Number"
+                                                                 value="#{billController.newPatient.person.phone}"
+                                                                 style="width: 135;">
+                                                    </p:inputMask>
 
-                                                                        listener="#{billController.dateChangeListen()}"  />
-                                                            </p:inputText>
-                                                            <p:inputText autocomplete="off" id="month"
-                                                                         style="width: 50px; " value="#{billController.yearMonthDay.month}">
-                                                                <f:ajax event="keyup" execute="@this year day" render="calNewPtDob" listener="#{billController.dateChangeListen()}"  />
-                                                            </p:inputText>
-                                                            <p:inputText autocomplete="off" id="day" 
-                                                                         style="width: 50px;" value="#{billController.yearMonthDay.day}">
-                                                                <f:ajax event="keyup" execute="@this year month" render="calNewPtDob" listener="#{billController.dateChangeListen()}" />
-                                                            </p:inputText>
-                                                            <p:calendar  value="#{billController.newPatient.person.dob}" 
-                                                                         id="calNewPtDob"  navigator="true" pattern="dd/MM/yyyy" 
-                                                                         style="width: 100px!important;"
-                                                                         styleClass="shortinput">
-                                                                <f:ajax event="dateSelect" />
-                                                            </p:calendar>
-                                                        </h:panelGrid>
-                                                    </td>
-                                                </tr>
+                                                    <p:inputText autocomplete="off" id="txtEmail" placeholder="Enter Email here"
+                                                                 style="width: 350px;" value="#{billController.newPatient.person.email}">
+                                                        <f:ajax event="keyup" execute="@this year month" render="calNewPtDob" listener="#{billController.dateChangeListen()}" />
+                                                    </p:inputText>
 
-                                                <tr>
-                                                    <td >
-                                                        <h:outputLabel value="Phone,Area &amp; Nic"/>
-                                                    </td>
-                                                    <td> : </td>
-                                                    <td >
-                                                        <p:inputMask mask="999-9999999" id="txtNewPtPhone" 
-                                                                     autocomplete="off" maxlength="11" 
-                                                                     value="#{billController.newPatient.person.phone}"
-                                                                     style="width: 100px;">
-                                                        </p:inputMask>
 
-                                                    </td>
-                                                    <td  >
-                                                        <p:autoComplete id="acNewPtArea" converter="areaCon" 
-                                                                        completeMethod="#{areaController.completeArea}" 
-                                                                        var="pta" itemLabel="#{pta.name}" styleClass="shortinput"
-                                                                        itemValue="#{pta}" forceSelection="true" 
-                                                                        value="#{billController.newPatient.person.area}" ></p:autoComplete>
-                                                        <!--<p:inputMask mask="999999999V" value="#{billController.newPatient.person.nic}" />-->
-                                                        <p:inputText maxlength="12" value="#{billController.newPatient.person.nic}"/>
+                                                    <p:inputText style="width:135px;" placeholder="National ID No." value="#{billController.newPatient.person.nic}"/>
+                                                    <p:autoComplete id="acNewPtArea" converter="areaCon" placeholder="Search &amp; Select Area"
+                                                                    completeMethod="#{areaController.completeArea}" 
+                                                                    var="pta" itemLabel="#{pta.name}" styleClass="shortinputOpd"
+                                                                    itemValue="#{pta}" forceSelection="true" 
+                                                                    value="#{billController.newPatient.person.area}" ></p:autoComplete>
 
-                                                    </td>
+                                                </p:panelGrid>
+                                                <p:panelGrid columns="1" >
+                                                    <p:inputText style="width:506px;" placeholder="Address" value="#{billController.newPatient.person.address}"/>
+                                                </p:panelGrid>
+                                                <p:watermark value="YEAR" for="year" />
+                                                <p:watermark value="MONTH" for="month" />
+                                                <p:watermark value="DAYS" for="day" />
+                                                <p:watermark for="calNewPtDob" value="Birthday" ></p:watermark>
+                                                <p:tooltip for="year" >
+                                                    You can enter the age in years here. The system will calculate the approximate date of birth.
+                                                </p:tooltip>
+                                                <p:tooltip for="month" >
+                                                    In children below five years, you may enter the age in months here. The system will use this data to calculate the approximate date of birth.
+                                                </p:tooltip>
+                                                <p:tooltip for="day" >
+                                                    In children below one month, you may enter the age in days here. The system will use this to calculate the approximate date of birth.
+                                                </p:tooltip>
+                                                <p:tooltip for="calNewPtDob" >
+                                                    Select Gender
+                                                </p:tooltip>
+                                                <p:tooltip for="cmbTitle" >
+                                                    Select Title
+                                                </p:tooltip>
+                                                <p:tooltip for="txtNewPtName" >
+                                                    Enter Patient Name
+                                                </p:tooltip>
+                                                <p:tooltip for="txtNewSex" >
+                                                    Select Gender
+                                                </p:tooltip>
+                                                <p:tooltip for="acNewPtArea" >
+                                                    Search Area
+                                                </p:tooltip>
+                                                <p:tooltip for="calNewPtDob" >
+                                                    You can also enter the Date of Birth
+                                                </p:tooltip>
+                                                <p:tooltip for="txtEmail" >
+                                                    Enter the email
+                                                </p:tooltip>
+                                                <p:tooltip for="txtNewSex" >
+                                                    Select Gender
+                                                </p:tooltip>
+                                                <p:tooltip for="txtNewSex" >
+                                                    Select Gender
+                                                </p:tooltip>
+                                            </p:panel>
 
-                                                </tr>
-                                            </table>
-
-                                            <p:watermark value="YEAR" for="year" />
-                                            <p:watermark value="MONTH" for="month" />
-                                            <p:watermark value="DAYS" for="day" />
-                                            <p:watermark for="calNewPtDob" value="Birthday" ></p:watermark>
 
                                         </p:tab>
 
@@ -647,7 +665,7 @@
 
                         <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
                                          onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
-                                                         return false;"/>
+                                                     return false;"/>
                     </div>
                     <h:panelGroup id="fiveFivePaperWithHeadings">
                         <ui:repeat value="#{billController.bills}" var="b">
