--- a/src/main/webapp/lab/patient_report.xhtml
+++ b/src/main/webapp/lab/patient_report.xhtml
@@ -334,7 +334,7 @@
 
                         <h:panelGroup  id="divPrint" >
 
-                            <div class="labBillPrintPanel" style="background:whitesmoke;color: black; width: 21cm;height: 28cm;margin: auto; margin-top: 1cm;margin-bottom: 1cm;" >
+                            <div class="labBillPrintPanel" style="color: black; width: 21cm;height: 28cm;margin: auto; margin-top: 1cm;margin-bottom: 1cm;" >
 
                                 <h:panelGroup rendered="#{patientReportController.currentPatientReport.item.reportType ne 'Microbiology'}"  >
                                     <div id="divReport"  style="width:21cm;height: 28cm; position: relative;">
