--- a/src/main/webapp/admin_user_paymentScheme.xhtml
+++ b/src/main/webapp/admin_user_paymentScheme.xhtml
@@ -10,10 +10,12 @@
 
     <ui:define name="content">
 
-     
-        <h:panelGroup rendered="#{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin } " >
+     sdfsdfsdfsd
+     #{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin }
+     aaaaaa
+        <h:panelGroup rendered="#{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin }" >
             <h:form  >
-                <p:panel header="Allow user to log on to Departments" >
+                <p:panel header="Allowed Payment Schemes for Users" >
                     <h:panelGrid  columns="2" >                          
                         <h:outputLabel value="Select User"/>
                         <p:autoComplete id="user" converter="webUs" forceSelection="true" 
