--- a/src/main/webapp/admin_user_privilages.xhtml
+++ b/src/main/webapp/admin_user_privilages.xhtml
@@ -12,9 +12,24 @@
             <p:panelGrid columns="2">                   
 
                 <p:panel header="Manage User Privilages"   >
+
+
+                    <f:facet name="header" >
+                        <h:outputLabel value="Manage User Privilages"/>
+                        <p:commandButton value="Update User Privilage"  action="#{userPrivilageController.savePrivileges()}" ajax="false" onclick="onSubmitButton();" >  
+                        </p:commandButton>
+
+
+                        <p:commandButton ajax="false" value="Back" action="#{webUserController.backToViewUsers()}" >
+                        </p:commandButton>
+
+                    </f:facet>
+
                     <h:panelGrid  columns="2" >                          
-                        <h:outputLabel value="Select User"/>
-                        <p:autoComplete id="user" converter="webUs" forceSelection="true"  completeMethod="#{webUserController.completeUser}" var="us" itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"  value="#{userPrivilageController.currentWebUser}" >
+
+                        <p:autoComplete id="user" converter="webUs" forceSelection="true"  completeMethod="#{webUserController.completeUser}" var="us" 
+                                        itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"  
+                                        value="#{userPrivilageController.currentWebUser}" >
                             <f:ajax event="itemSelect" execute="user" render="tree" />
                         </p:autoComplete>
                     </h:panelGrid>
@@ -30,8 +45,6 @@
                             </p:treeNode>  
                         </p:tree>  
 
-                        <p:commandButton value="Update User Privilage"  action="#{userPrivilageController.savePrivileges()}" ajax="false" onclick="onSubmitButton();" >  
-                        </p:commandButton>
 
                     </p:panel>
                 </p:panel>
